novnc (1:0.4+dfsg+1-5) experimental; urgency=low

  * New upstream release
  * Change uptream URL
  * Change epoch to follow novnc version

 -- Mehdi Abaakouk <sileht@sileht.net>  Fri, 21 Sep 2012 11:25:25 +0200

novnc (2012.1~e3+dfsg+1-5) UNRELEASED; urgency=low

  [ Ghe Rivero]
  * Removed depend on nova-common
  * Split config file

 -- Ghe Rivero <ghe@debian.org>  Wed, 25 Jul 2012 14:05:31 +0200

novnc (2012.1~e3+dfsg+1-4) unstable; urgency=low

  * replace debian/rules build: target with override_dh_auto_build-arch:
    otherwise it is ignored and fails when running dpkg-buildpackage -B

 -- Loic Dachary (OuoU) <loic@debian.org>  Tue, 26 Jun 2012 21:57:28 +0200

novnc (2012.1~e3+dfsg+1-3) unstable; urgency=low

  * Add a build-depend on python-greenlet. There is no actual need for
    python-greenlet at build time. But on some architectures
    python-greenlet is not yet available and novnc should not try to build
    because the resulting package will fail to install. This workaround
    should not be necessary but the maintainer of python-greenlet has not
    resolved portability issues in months at this time and we cannot
    assume it will be resolved quickly. (Closes: #665893).

 -- Loic Dachary (OuoU) <loic@debian.org>  Tue, 26 Jun 2012 11:17:31 +0200

novnc (2012.1~e3+dfsg+1-2) unstable; urgency=low

  [ Ghe Rivero ]
  * Bumped Debian Policy Version
  * Updated copyright file

  [ Thomas Goirand ]
  * Added a debian/novnc.postinst creating nova user and group.
  * Added a debian/gbp.conf

 -- Thomas Goirand <zigo@debian.org>  Sun, 11 Mar 2012 10:31:31 -0400

novnc (2012.1~e3+dfsg-1) unstable; urgency=low

  * New upstream release

 -- Ghe Rivero <ghe.rivero@stackops.com>  Mon, 30 Jan 2012 17:09:57 +0100

novnc (0.1) maverick; urgency=low

  * First upstream release

 -- Joel Martin <github@martintribe.org>  Tue, 05 Jul 2011 01:00:00 -0600