@@ -1,8 +1,8 @@
-# git-buildpackage --git-builder='debuild -i -I -uc -us' --git-debian-branch=debian/unstable --git-upstream-tag='essex-3' --git-tag --git-sign-tags  --git-compression=xz
 [DEFAULT]
-upstream-branch = debian/dfsg
-debian-branch = debian/unstable
-pristine-tar = False
+upstream-branch = master
+debian-branch = debian/experimental
+upstream-tag = %(version)s
+compression = xz
 
 [git-buildpackage]
 export-dir = ../build-area/
