@@ -1,7 +1,11 @@
 #!/usr/bin/make -f
 
-# Verbose mode
 # export DH_VERBOSE=1
+
+DEBVERS := $(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
+VERSION := $(shell echo '$(DEBVERS)' | sed -e 's/^[[:digit:]]*://' -e 's/[~-].*//')
+DEBFLAVOR :=$(shell dpkg-parsechangelog | grep -E ^Distribution: | cut -d" " -f2)
+DEBPKGNAME :=$(shell dpkg-parsechangelog | grep -E ^Source: | cut -d" " -f2)
 
 %:
 	dh $@ --with python2
@@ -12,3 +16,15 @@ override_dh_clean:
 
 override_dh_auto_build-arch:
 	make -C utils rebind.so
+
+get-vcs-source:
+	git remote add upstream git://github.com/cloudbuilders/noVNC.git || true
+	git fetch upstream
+	if ! git checkout master ; then \
+		echo "No upstream branch: checking out" ; \
+		git checkout -b master upstream/master ; \
+	fi
+	git checkout debian/experimental
+	if [ ! -f ../$(DEBPKGNAME)_$(VERSION).orig.tar.xz ] ; then \
+		git archive --prefix=$(DEBPKGNAME)-$(VERSION)/ $(VERSION) | xz >../$(DEBPKGNAME)_$(VERSION).orig.tar.xz ; \
+	fi
