@@ -1,8 +1,13 @@
 novnc (1:0.4+dfsg+1-5) experimental; urgency=low
 
+  [ Mehdi Abaakouk ]
   * New upstream release
   * Change uptream URL
   * Change epoch to follow novnc version
+
+  [ Thomas Goirand ]
+  * Added a get-vcs-source target.
+  * Added a gbp.conf file.
 
  -- Mehdi Abaakouk <sileht@sileht.net>  Fri, 21 Sep 2012 11:25:25 +0200
 
